install/k8s/add-ons/kubeview/kubeview-service.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: kubeview
  name: kubeview
spec:
  type: ClusterIP
  ports:
  - name: kubeview
    port: 3030
    targetPort: 8000
    protocol: TCP
  selector:
    app: kubeview
