install/k8s/add-ons/kubeview/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubeview-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /kubeview(.*)
        #pathType: Prefix
        backend:
          serviceName: kubeview
          servicePort: 3333
